# rustfs-cli

./: Cargo.toml  README.md  api.md  clientadmin.rs  infocommands.rs  main.rs  s3.rs  桶复制api.md
cmd/: admin.rs  admininfo.rs  alias.rs  aliasexport.rs  aliaslist.rs  aliasremove.rs  aliasset.rs  clientadmin.rs  cmd.rs  config.rs  configx.rs  cp.rs  find.rs  ls.rs  lsmain.rs  main.rs  mb.rs  put.rs  rb.rs  rm.rs  stat.rs  tofu.rs
s3/: client.rs
