[package]
name = "rustfs-cli"
version = "0.1.0"
edition = "2021"


[build]
jobs = 4

[profile.dev]
incremental = true

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
regex = "1"
url = "2.5.2"
lazy_static = "1.5.0"
dirs = "5.0.1"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
x509-parser = "0.16.0"
reqwest = "0.12.8"
rustls = "0.23.15"
sha2 = "0.10.8"
base64 = "0.22.1"
webpki-roots = "0.26.6"
hex = "0.4.3"
tokio-rustls = "0.26.0"
rand = "0.8.5"
aws-sdk-s3 = "1.57.0"
tracing = "0.1.40"
runtime = "0.0.0"
tokio = "1.40.0"
minio = "0.1.0"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
aws-sigv4 = "1.2.5"
http = "1.1.0"
hyper = "1.5.0"
aws-smithy-runtime-api = "1.7.2"
http1 = "0.0.0"
s3v4 = "0.3.5"
aws-sign-v4 = "0.3.0"
colored = "2.1.0"
humantime = "2.1.0"
pluralizer = "0.4.0"
byte-unit = "5.1.6"
human_bytes = "0.4.3"
prettytable = "0.10.0"
anyhow = "1.0.93"
progressbar = "0.1.0"
indicatif = "0.17.8"
glob = "0.3.1"
wildcard = "0.2.0"
unicode-normalization = "0.1.24"
bytesize = "1.3.0"

[[bin]]
name = "rustfs-cli"
path = "main.rs"

[[bin]]
name = "admin"
path = "clientadmin.rs"
