[package]
name = "rustfs-cli"
version = "0.1.0"
edition = "2021"


[build]
jobs = 4

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
regex = "1"
url = "2.5.2"
lazy_static = "1.5.0"
dirs = "5.0.1"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
x509-parser = "0.16.0"
reqwest = "0.12.8"
rustls = "0.23.15"
sha2 = "0.10.8"
base64 = "0.22.1"
webpki-roots = "0.26.6"
hex = "0.4.3"
tokio-rustls = "0.26.0"
rand = "0.8.5"
aws-sdk-s3 = "1.57.0"
tracing = "0.1.40"
runtime = "0.0.0"
tokio = "1.40.0"
minio = "0.1.0"

[[bin]]
name = "rustfs-cli"
path = "main.rs"
[[bin]]
name = "s3-cli"
path = "s3.rs"
